# VoiceModeTranscript

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  app.py  list_sdl_devices.py  migrate_add_bookmarks.py  pyproject.toml  test_assemblyai_simple.py  test_deduplication.py  test_flask_device_mapping.py  test_llm_deduplication.py  transcripts_raw.md  verify_modular_system.py
docs/: 000-0-SETUP_GUIDE.md  001-STATUS.md  003-1-deduplication_progress.md  003-2-llm_deduplication_progress.md  004-flask_whisper_llm_integration_plan.md  005-implementation_summary_phases_1_3.md  008-whisper_device_parameter_investigation.md  009-VAD_CONFIGURATION_SUMMARY.md  010-session_bookmarking_proposal.md  011-refactoring-progress.md  012-pause_resume_implementation.md  012-session_summary_implementation.md  014-frontend_modularization_plan.md  015-database_module_refactoring_plan.md  AUDIO_SETUP.md  README_whisper_setup.md  device_selection_implementation.md  flask_whisper_llm_integration_plan.md  manual_trigger_implementation.md
src/: __init__.py  audio_capture.py  audio_test.py  llm_processor.py  multi_source_whisper_manager.py  sdl_device_mapper.py  transcript_processor.py  whisper_cpp_client.py  whisper_stream_processor.py  whisper_test.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  database.py  repositories.py  session.py  transcript.py
src/services/: __init__.py  app_service.py  audio_service.py  device_service.py  llm_service.py  session_service.py  transcript_service.py
static/css/: style.css
static/js/: app-modular.js  app.js
static/js/config/: module-config.js
static/js/core/: event-bus.js  module-base.js  state-store.js
static/js/modules/: database.js  device.js  llm.js  recording.js  sse.js  transcript.js  ui.js  utils.js
templates/: index.html
tests/: run_whisper_stream.sh  run_whisper_stream_vad.sh  test_deduplication.py  test_llm_deduplication.py  test_modular_integration.py
tests/obsolete/: test_assemblyai_simple.py  test_minimal_demo.py
voxtral_test/: README.md  VOXTRAL_README.md  download_model.py  start_voxtral_server.py  test_mistral_api.py  test_setup.py  test_voxtral_transcription.py  test_voxtral_understanding.py
